erDiagram
    patients    ||--o{ sejours     : "patient_hash"
    sejours     ||--o{ diagnostics : "stay_id"
    pathologies ||--o{ diagnostics : "code_cim10"

    patients {
        String patient_hash PK "pseudonyme SHA-256 salé"
        UInt16 birth_year "nullable (NULL si aberrant)"
        String sex "M | F | vide"
        String region_code "département"
    }
    sejours {
        String stay_id PK
        String patient_hash FK
        String service_code "présent au référentiel services"
        DateTime admission_ts "non NULL"
        DateTime discharge_ts "nullable — NULL = séjour en cours"
        String admission_mode "urgence | programme | mutation"
        String discharge_mode "domicile | mutation | transfert | deces"
        Float64 los_hours "durée — NULL si en cours"
    }
    diagnostics {
        String stay_id FK "rattaché à un séjour valide"
        String code_cim10 FK "présent au référentiel cim10"
        String type "principal | associe"
    }
    pathologies {
        String code_cim10 PK "référentiel CIM-10 matérialisé (codes observés en diagnostics)"
        String libelle "libellé repris de bronze.ref_cim10"
    }
    monitoring {
        String stay_id "identifiant de séjour — flux autonome, non contraint"
        DateTime ts "PARTITION BY jour"
        Int32 heart_rate "20-250 bpm, nullable"
        Int32 spo2 "50-100 pourcent, nullable"
        Float32 temp_c "30-45 degC, nullable"
    }
